wf-list: fix wf name-status alignment
closes #208

--- a/reana-ui/src/pages/workflowList/components/WorkflowList.module.scss
+++ b/reana-ui/src/pages/workflowList/components/WorkflowList.module.scss
@@ -2,7 +2,7 @@
   -*- coding: utf-8 -*-
 
   This file is part of REANA.
-  Copyright (C) 2020, 2021 CERN.
+  Copyright (C) 2020, 2021, 2022 CERN.
 
   REANA is free software; you can redistribute it and/or modify it
   under the terms of the MIT License; see LICENSE file for more details.
@@ -37,6 +37,7 @@
     display: flex;
     align-items: baseline;
     flex-grow: 1;
+    margin-right: 1em;
 
     .status-icon {
       padding-right: 20px;
@@ -73,6 +74,7 @@
 
   .status-box {
     width: 210px;
+    flex-shrink: 0;
   }
 
   .actions {
